# cargo-minimal-versions

./: .clippy.toml  .deny.toml  .git-blame-ignore-revs  CHANGELOG.md  Cargo.toml  README.md
.github/.cspell/: project-dictionary.txt  rust-dependencies.txt
.github/workflows/: ci.yml  release.yml
src/: cargo.rs  cli.rs  context.rs  fs.rs  main.rs  manifest.rs  metadata.rs  process.rs  remove_dev_deps.rs  restore.rs  term.rs
tests/: test.rs
tools/: check-minimal-versions.sh  publish.sh
