[package]
name = "cargo-minimal-versions"
version = "0.1.20"
edition = "2021"
rust-version = "1.67"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/cargo-minimal-versions"
keywords = ["cargo", "subcommand", "testing"]
categories = ["command-line-utilities", "development-tools::cargo-plugins", "development-tools::testing"]
exclude = ["/.*", "/tools"]
description = """
Cargo subcommand for proper use of -Z minimal-versions.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[workspace]
resolver = "2"

[dependencies]
anyhow = "1.0.47"
ctrlc = { version = "3.1.4", features = ["termination"] }
is-terminal = "0.4.2"
lexopt = "0.3"
same-file = "1.0.1"
semver = "1"
serde_json = "1"
termcolor = "1"
toml_edit = "0.20"

[dev-dependencies]

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"
